- Added the API modifications from the branch api-redefinition. - Updated the 'tokenValidator' to use only the token (and not also the user). - Added some missing 'return' staments to 'orchestration/cloudify_provider_connector/lib/cloudify.js' and to 'orchestration/mock_example/lib/mock.js' - Modified test 'tests/nodejs/unit/database.js' to use local config instead of the config from the root broker path. - Added a npm script from running token validators unit test, 'unit_test'. - Updated the 'authHandler' to use only the token (and not also the user). - Modified the module 'dummyTokenValidation' to return only 'true' or 'false' in the callback (and not also token user). - Changed the branch in use of the git submodule 'iam' to master.
